tree-sitter-march/grammar.js
    source_file: $ => repeat1($._declaration),

    module_def: $ => seq(
      'mod', field('name', $.module_path),
      'do', repeat($._declaration), 'end',
    ),

    _declaration: $ => choice(
      $.attribute,
      $.module_def,
      $.derive_declaration,
      $.satisfy_declaration,
      $.resource_declaration,
      $.transitions_def,
      $.app_def,
      $.doc_annotation,
      $.function_def,
      $.let_declaration,
      $.type_def,
      $.actor_def,
      $.interface_def,
      $.impl_def,
      $.sig_def,
      $.extern_def,
      $.protocol_def,
      $.use_declaration,
      $.import_declaration,
      $.alias_declaration,
      $.needs_declaration,
      $.capability_declaration,
      $.test_decl,
      $.describe_decl,
      $.setup_decl,
      $.setup_all_decl,
    ),

    // @[name], @[name(arg)], @name(arg), @invariant(expr)
    function_def: $ => seq(
      // `pfn` is the private form; it never combines with `pub`.
      choice(seq(optional('pub'), 'fn'), 'pfn'),
      field('name', choice($.identifier, alias('send', $.identifier))),
      optional(seq('[', commaSep1(seq($.identifier, ':', $._type)), ']')),
      '(', optional(commaSep($.fn_param)), ')',
      optional(seq(':', field('return_type', $._type))),
      optional($.when_guard),
      'do', field('body', $.block_body), 'end',
    ),

    fn_param: $ => choice(
      $.named_param,
      $._pattern,
    ),

    named_param: $ => choice(
      seq(
        optional(choice('linear', 'affine')),
        field('name', $.identifier),
        ':', field('type', $._type),
        optional(seq('\\\\', field('default', $._expr))),
      ),
      seq(field('name', $.identifier), '\\\\', field('default', $._expr)),
    ),

    block_body: $ => seq(
      $._block_expr,
      repeat($._block_expr),
    ),

    _block_expr: $ => choice(
      $.let_declaration,
      $.local_function,
      $._expr,
    ),

    let_declaration: $ => seq(
      optional(choice('linear', 'affine')),
      'let', optional(choice('?', '*')), field('pattern', $._pattern), optional($.type_annotation), '=', field('value', $._expr),
    ),

    // Full pattern rules
    _pattern: $ => choice(
      $.as_pattern,
      $.or_pattern,
      $._pattern_alt,
    ),

    wildcard_pattern: _ => '_',

    variable_pattern: $ => alias($.identifier, $.variable_pattern),

    constructor_pattern: $ => seq(
      field('name', choice($.type_identifier, $.qualified_constructor)),
      optional(seq('(', commaSep1($._pattern), ')')),
    ),

    atom_pattern: $ => seq(
      $.atom_literal,
      optional(seq('(', commaSep1($._pattern), ')')),
    ),

    tuple_pattern: $ => seq(
      $._lparen, $._pattern, ',', commaSep1($._pattern), ')',
    ),

    literal_pattern: $ => choice(
      $.integer,
      $.float,
      $.string,
      $.boolean,
      seq('-', $.integer),
      seq('-', $.float),
    ),

    _type: $ => choice(
      $.arrow_type,
      $._type_atom,
    ),

    arrow_type: $ => prec.right(1, seq(
      field('param', $._type_atom), '->', field('return', $._type),
    )),

    _type_atom: $ => choice(
      $.unit_type,
      $.parenthesized_type,
      $.record_type,
      $.type_nat,
      $.type_application,
      $.qualified_type,
      $.type_constructor,
      $.type_variable,
      $.linear_type,
      $.tuple_type,
      $.refinement_type,
    ),

    // { Int | _ > 0 }, { List(a) | len(_) > 0 }, { v : Int | v != 0 }
    refinement_type: $ => seq(
      '{',
      optional(seq(field('binder', $.identifier), ':')),
      field('base', $._type),
      '|',
      field('predicate', $._expr),
      '}',
    ),

    type_application: $ => seq(
      field('name', choice($.type_identifier, $.qualified_type)),
      '(', commaSep1($._type), ')',
    ),

    // A type named through its module: `Mgrep.Search.MatcherMode.Mode`.
    qualified_type: $ => seq(
      $.type_identifier, repeat1(seq('.', $.type_identifier)),
    ),

    // alias() — NOT new regex — to avoid duplicate-terminal conflicts
    type_constructor: $ => alias($.type_identifier, $.type_constructor),
    type_variable: $ => alias($.identifier, $.type_variable),

    linear_type: $ => seq(
      choice('linear', 'affine'),
      field('type', $._type_atom),
    ),

    tuple_type: $ => seq(
      '(', $._type, ',', commaSep1($._type), ')',
    ),

    type_def: $ => choice(
      seq('tag', field('name', $.type_identifier)),
      $._type_def,
    ),
    _type_def: $ => seq(
      optional('always_linear'),
      choice(seq(optional('opaque'), 'type'), 'ptype'),
      field('name', $.type_identifier),
      optional($.type_params),
      '=',
      choice(
        seq($.variant, repeat(seq('|', $.variant))),  // variant/sum type
        $._type,                                        // alias
      ),
    ),

    variant: $ => seq(
      field('name', choice($.type_identifier, $.atom_literal)),
      optional(seq('(', commaSep1($._type), ')')),
    ),

    import_declaration: $ => seq(
      'import',
      field('path', $.module_path),
      optional(choice(
        seq('.', '{', commaSep1(choice($.identifier, $.type_identifier)), '}'),
        seq(',', choice('only', 'except'), ':',
            '[', commaSep($.identifier), ']'),
      )),
    ),

    // alias Long.Name  |  alias Long.Name as Short  |  alias Long.Name, as: Short
    alias_declaration: $ => seq(
      'alias',
      field('path', $.module_path),
      optional(choice(
        seq('as', field('name', $.type_identifier)),
        seq(',', 'as', ':', field('name', $.type_identifier)),
      )),
    ),

    // needs IO.Network, IO.Clock
    needs_declaration: $ => seq('needs', commaSep1($.scoped_capability)),
    scoped_capability: $ => seq($.module_path, optional(seq('(', $.string, ')'))),

    // `cap no_panic` and friends lex as a single keyword in the compiler, so
    // the space between the two words is not free-form whitespace here either.
    capability_declaration: $ => choice(
      seq('proof', 'cap', field('name', $.type_identifier),
          optional(seq('with', field('dictionary', $.type_identifier)))),
      seq('cap', field('name', choice(
        'no_panic', 'pure', 'no_extern', 'deterministic', 'no_alloc', 'verified',
      ))),
    ),

    module_path: $ => seq($.type_identifier, repeat(seq('.', $.type_identifier))),

    // Test declarations
    _expr: $ => choice(
      $.assert_expression,
      $.pipe_expression,
      $.or_expression,
      $.and_expression,
      $.comparison_expression,
      $.additive_expression,
      $.multiplicative_expression,
      $.unary_expression,
      $.call_expression,
      $.constructor_expression,
      $.bare_constructor,
      $.field_expression,
      $.lambda_expression,
      $.if_expression,
      $.match_expression,
      $.cond_expression,
      $.block_expression,
      $.record_expression,
      $.record_update,
      $.tuple_expression,
      $.parenthesized_expression,
      $.unit_expression,
      $.list_expression,
      $.list_comprehension,
      $.send_expression,
      $.spawn_expression,
      $.sigil_expression,
      $.atom,
      $.typed_hole,
      $.refinement_placeholder,
      $.integer,
      $.float,
      $.string,
      $.boolean,
      $.identifier,
    ),

    comparison_expression: $ => prec.left(4, seq(
      field('left', $._expr),
      field('operator', choice('==', '!=', '<', '>', '<=', '>=')),
      field('right', $._expr),
    )),
    call_expression: $ => prec(8, seq(
      field('function', $._expr),
      '(', optional(commaSep($._call_arg)), ')',
    )),
    bare_constructor: $ => field('name', $.type_identifier),
    field_expression: $ => prec.left(9, seq(
      // The field may be a type_identifier so that a qualified path such as
      // `Mgrep.Search.Matcher.contains_case` parses as nested field accesses.
      field('object', $._expr), '.',
      field('field', choice($.identifier, $.type_identifier)),
    )),

    // `fn params -> body`.  In general the body is `let`s then one
    // expression (the compiler's lambda_body); as a call argument it may be
    // any statement sequence, since `,` or `)` bounds it (call_arg).
    _call_arg: $ => choice(
      $._expr,
      alias($.call_arg_lambda, $.lambda_expression),
    ),
    _lparen: $ => choice('(', $._stmt_lparen),
    sigil_expression: $ => seq(
      field('prefix', $.sigil_prefix),
      field('content', choice($.triple_string, $.string)),
    ),
    sigil_prefix: _ => token(seq('~', /[A-Za-z][A-Za-z0-9_]*/)),


    match_expression: $ => seq(
      'match', field('value', $._expr), 'do',
      optional('|'),
      $.match_arm,
      repeat(seq(optional('|'), $.match_arm)),
      'end',
    ),

    // Cond form: `match do c1 -> e1 | _ -> e2 end`, no scrutinee; each arm's
    // left side is a boolean expression (or `_`).
    match_arm: $ => seq(
      field('pattern', $._pattern),
      optional($.when_guard),
      '->',
      field('body', $.block_body),
    ),

    // Literals
    boolean: _ => choice('true', 'false'),

    // Wrapped in token() so the entire string is lexed as one atomic unit.
    // Without this, the tree-sitter lexer tries to match comment tokens (which
    // start with '--') inside string content.  After '--' the lexer enters a
    // comment-scanning state; when it then sees the closing '"' it advances to
    // the comment-accept state and swallows the quote, breaking the string.
    // Making the rule atomic prevents any extra-token (comment/whitespace)
    // matching from occurring mid-string.
    string: _ => token(seq(
      '"',
      repeat(choice(
        /[^"\\]+/,
        seq('\\', /[^x]|x[0-9a-fA-F]{2}/),
      )),
      '"',
    )),

    atom_literal: _ => seq(':', /[a-z][a-zA-Z0-9_']*/),

    refinement_placeholder: _ => '_',

    // Atom expression: :ok or :error(msg)
    triple_string: _ => /"""([^"]|"[^"]|""[^"])*"{0,2}"""/,

    integer: _ => /[0-9]+/,
    identifier: _ => /[a-z_][a-zA-Z0-9_']*/,
    type_identifier: _ => /[A-Z][a-zA-Z0-9_']*/,
  },
});

// Helpers — defined outside grammar({}) so they are plain JS functions.
function commaSep(rule) {
  return optional(commaSep1(rule));
}
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
