tree-sitter-march/test/corpus/patterns.txt
================================================================================
Wildcard pattern
================================================================================
mod Foo do fn f(x) do match x do _ -> 1 end end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      (fn_param
        (variable_pattern
          (variable_pattern)))
      body: (block_body
        (match_expression
          value: (identifier)
          (match_arm
            pattern: (wildcard_pattern)
            body: (block_body
              (integer))))))))

================================================================================
Variable pattern
================================================================================
mod Foo do fn f(x) do match x do n -> n end end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      (fn_param
        (variable_pattern
          (variable_pattern)))
      body: (block_body
        (match_expression
          value: (identifier)
          (match_arm
            pattern: (variable_pattern
              (variable_pattern))
            body: (block_body
              (identifier))))))))

================================================================================
Constructor pattern with args
================================================================================
mod Foo do fn f(x) do match x do Some(n) -> n end end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      (fn_param
        (variable_pattern
          (variable_pattern)))
      body: (block_body
        (match_expression
          value: (identifier)
          (match_arm
            pattern: (constructor_pattern
              name: (type_identifier)
              (variable_pattern
                (variable_pattern)))
            body: (block_body
              (identifier))))))))

================================================================================
Tuple pattern
================================================================================
mod Foo do fn f(x) do match x do (a, b) -> a end end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      (fn_param
        (variable_pattern
          (variable_pattern)))
      body: (block_body
        (match_expression
          value: (identifier)
          (match_arm
            pattern: (tuple_pattern
              (variable_pattern
                (variable_pattern))
              (variable_pattern
                (variable_pattern)))
            body: (block_body
              (identifier))))))))

================================================================================
Negative literal pattern
================================================================================
mod Foo do fn f(x) do match x do -1 -> true end end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      (fn_param
        (variable_pattern
          (variable_pattern)))
      body: (block_body
        (match_expression
          value: (identifier)
          (match_arm
            pattern: (literal_pattern
              (integer))
            body: (block_body
              (boolean))))))))

================================================================================
Atom pattern bare
================================================================================
mod Foo do fn f(x) do match x do :ok -> true end end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      (fn_param
        (variable_pattern
          (variable_pattern)))
      body: (block_body
        (match_expression
          value: (identifier)
          (match_arm
            pattern: (atom_pattern
              (atom_literal))
            body: (block_body
              (boolean))))))))
