tree-sitter-march/test/corpus/types.txt
================================================================================
Type constructor bare
================================================================================
mod Foo do fn f() : Int do 1 end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      return_type: (type_constructor
        (type_constructor))
      body: (block_body
        (integer)))))

================================================================================
Type application
================================================================================
mod Foo do fn f() : List(Int) do 1 end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      return_type: (type_application
        name: (type_identifier)
        (type_constructor
          (type_constructor)))
      body: (block_body
        (integer)))))

================================================================================
Arrow type
================================================================================
mod Foo do fn f() : Int -> Bool do 1 end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      return_type: (arrow_type
        param: (type_constructor
          (type_constructor))
        return: (type_constructor
          (type_constructor)))
      body: (block_body
        (integer)))))

================================================================================
Tuple type
================================================================================
mod Foo do fn f() : (Int, Bool) do 1 end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      return_type: (tuple_type
        (type_constructor
          (type_constructor))
        (type_constructor
          (type_constructor)))
      body: (block_body
        (integer)))))

================================================================================
Linear type
================================================================================
mod Foo do fn f() : linear Int do 1 end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      return_type: (linear_type
        type: (type_constructor
          (type_constructor)))
      body: (block_body
        (integer)))))

================================================================================
Type variable
================================================================================
mod Foo do fn f() : a do 1 end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      return_type: (type_variable
        (type_variable))
      body: (block_body
        (integer)))))

================================================================================
Refinement types
================================================================================
mod M do
fn f(n : { Int | _ > 0 }, xs : { List(a) | len(_) > 0 }, v : { v : Int | v != 0 }) : { Int | _ >= 0 } do
1
end
end
--------------------------------------------------------------------------------

(source_file
  (module_def
    (module_path
      (type_identifier))
    (function_def
      (identifier)
      (fn_param
        (named_param
          (identifier)
          (refinement_type
            (type_constructor
              (type_constructor))
            (comparison_expression
              (refinement_placeholder)
              (integer)))))
      (fn_param
        (named_param
          (identifier)
          (refinement_type
            (type_application
              (type_identifier)
              (type_variable
                (type_variable)))
            (comparison_expression
              (call_expression
                (identifier)
                (refinement_placeholder))
              (integer)))))
      (fn_param
        (named_param
          (identifier)
          (refinement_type
            (identifier)
            (type_constructor
              (type_constructor))
            (comparison_expression
              (identifier)
              (integer)))))
      (refinement_type
        (type_constructor
          (type_constructor))
        (comparison_expression
          (refinement_placeholder)
          (integer)))
      (block_body
        (integer)))))

================================================================================
Qualified type paths and qualified calls
================================================================================
mod M do
fn f(m : A.B.Mode, xs : A.B.Box(Int)) : Int do
A.B.C.go(m)
end
end
--------------------------------------------------------------------------------

(source_file
  (module_def
    (module_path
      (type_identifier))
    (function_def
      (identifier)
      (fn_param
        (named_param
          (identifier)
          (qualified_type
            (type_identifier)
            (type_identifier)
            (type_identifier))))
      (fn_param
        (named_param
          (identifier)
          (type_application
            (qualified_type
              (type_identifier)
              (type_identifier)
              (type_identifier))
            (type_constructor
              (type_constructor)))))
      (type_constructor
        (type_constructor))
      (block_body
        (call_expression
          (field_expression
            (field_expression
              (field_expression
                (bare_constructor
                  (type_identifier))
                (type_identifier))
              (type_identifier))
            (identifier))
          (identifier))))))

================================================================================
Abstract refinement shorthand
================================================================================
mod Foo do fn f(xs : List(a[p]), k : a -> Bool[p]) : Int do 1 end end
--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (module_path
      (type_identifier))
    (function_def
      name: (identifier)
      (fn_param
        (named_param
          name: (identifier)
          type: (type_application
            name: (type_identifier)
            (abstract_refinement_type
              base: (type_variable
                (type_variable))
              predicate: (identifier)))))
      (fn_param
        (named_param
          name: (identifier)
          type: (arrow_type
            param: (type_variable
              (type_variable))
            return: (abstract_refinement_type
              base: (type_constructor
                (type_constructor))
              predicate: (identifier)))))
      return_type: (type_constructor
        (type_constructor))
      body: (block_body
        (integer)))))
